# firmware-module

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.aca389f  Makefile  armc-cstubs.c  armc-start.S  firmware.c  firmware_test.c  k1879.lds  reconfigure.sh  toolchain-arm-none-eabi-module.cmake  toolchain-arm-none-eabi-rpi.cmake
nmc/: MC6901_2.cfg  MC6901_3.cfg  Makefile  NM_part.asm  NM_part.cpp  NM_part_abs.h  NM_part_test.cpp  NM_part_test1.cpp  NM_part_test2.cpp  nmc.files
peripheral/: module-base.h  module-gpio.c  module-gpio.h  module-systimer.c  module-systimer.h  module-uart.c  module-uart.h
peripheral/lls/: cupp_libelf.h  nmcload.c  nmcload.h
peripheral/xmodem-1k/: xmodem.c  xmodem.h
